feat: add CORS configuration properties and update security settings